RESOLVED FIXED247102
Validate import-assertions in static module imports
https://bugs.webkit.org/show_bug.cgi?id=247102
Summary Validate import-assertions in static module imports
Yusuke Suzuki
Reported 2022-10-26 20:08:22 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2022-10-26 20:10:06 PDT
Yusuke Suzuki
Comment 2 2022-10-26 20:12:17 PDT
EWS
Comment 3 2022-10-27 14:30:18 PDT
Committed 256075@main (04c8018f9ff3): <https://commits.webkit.org/256075@main> Reviewed commits have been landed. Closing PR #5839 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.